fix(button): add explicit highcontrast variables for disabled color

--- a/components/button/index.css
+++ b/components/button/index.css
@@ -239,6 +239,9 @@ a.spectrum-Button {
 /* windows high contrast mode over-writes for accent variant */
 @media (forced-colors: active) {
   .spectrum-Button {
+    --highcontrast-button-content-color-disabled: GrayText;
+    --highcontrast-button-border-color-disabled: GrayText;
+
     &:focus-ring {
       &:after {
         forced-color-adjust: none;
@@ -248,14 +251,11 @@ a.spectrum-Button {
 
     &.spectrum-Button--accent {
       &.spectrum-Button--fill {
-        background-color: ButtonText;
-        color: ButtonFace;
+        --highcontrast-button-background-color-default: ButtonText;
+        --highcontrast-button-content-color-default: ButtonFace;
+        --highcontrast-button-background-color-disabled: ButtonFace;
 
-        &:disabled,
-        &.is-disabled {
-          background-color: ButtonFace;
-          color: GrayText;
-        }
+
 
         /* simplified for a lot of state for high contrast mode */
         &:active,
@@ -266,6 +266,10 @@ a.spectrum-Button {
         }
         .spectrum-Button-label {
           forced-color-adjust: none;
+        }
+
+        &:disabled {
+          background-color: ButtonFace;
         }
       }
     }
